<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/doghouseimage"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_doghouse"
        android:icon="@drawable/photogenicdog"
        android:title="@string/doghouse"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/dogimage"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_doggydating"
        android:icon="@drawable/doggydating"
        android:title="@string/doggydating"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_message"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/message"
        app:showAsAction="always" />
</menu>