<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="" />

    <EditText
        android:id="@+id/etModUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/ModUsername" />

    <EditText
        android:id="@+id/etModPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="-1dp"
        android:ems="10"
        android:hint="@string/ModPassword" />

    <EditText
        android:id="@+id/etBiography"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-1dp"
        android:ems="10"
        android:hint="@string/ModBiography" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="3dp"
        android:text="Account Modify / Delete" />

</RelativeLayout>